kubernetes/ingress-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-controller
  labels:
    app: nginx-ingress
spec:
  selector:
    matchLabels:
      app: nginx-ingress
  template:
    metadata:
      labels:
        app: nginx-ingress
    spec:
      containers:
      - name: nginx-ingress-controller
        image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.24.1
        ports:
        - name: http
          protocol: TCP
          containerPort: 80
