kubernetes/ingress.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-controller
  labels:
    app: nginx-ingress
spec:
  selector:
    matchLabels:
      app: nginx-ingress
  template:
    metadata:
      labels:
        app: nginx-ingress
    spec:
      containers:
      - name: nginx-ingress-controller
        image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.24.1
        ports:
        - name: http
          protocol: TCP
          containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-controller
spec:
#  clusterIP: 192.168.121.62
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: nginx-ingress
  #  clusterIP: 192.168.29.79
  type: LoadBalancer
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: micropost-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /micropost/
        backend:
          serviceName: micropost-service
          servicePort: 8010
      - path: /statistics
        backend:
          serviceName: micropost-statistics
          servicePort: 8020
